--- a/GoToApp/res/values/strings.xml
+++ b/GoToApp/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">GoToApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="GroupListTitle">Groups</string>
+    <string name="title_activity_group_detail">GroupDetailActivity</string>
+    <string name="facebook_app_id">261786324026450</string>
 
 </resources>
