--- a/GoToApp/res/values/strings.xml
+++ b/GoToApp/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="GroupListTitle">Groups</string>
     <string name="title_activity_group_detail">GroupDetailActivity</string>
     <string name="facebook_app_id">261786324026450</string>
+    <string name="title_activity_get_user_facebook">GetUserFacebookActivity</string>
 
 </resources>
